--- a/src/classes/DynamicMapOfCountry.cls
+++ b/src/classes/DynamicMapOfCountry.cls
@@ -64,8 +64,8 @@ public with sharing class DynamicMapOfCountry {
         //Aggregate Qurey------> Total District Of State   
         Map<Id, State__c> mapOfStateToBeUpdate = new Map<Id, State__c>();                                       
         for(AggregateResult aggre : [SELECT State__c, COUNT(Id)totalDistrict
-                                                      FROM District__c 
-                                                      GROUP BY State__c]){
+                                     FROM District__c 
+                                     GROUP BY State__c]){
             mapOfStateToBeUpdate.put(String.valueOf(aggre.get('State__c')),new State__c(Id = (Id)aggre.get('State__c'),
                 Total_District__c = (Decimal)aggre.get('totalDistrict')));
         }
@@ -96,7 +96,7 @@ public with sharing class DynamicMapOfCountry {
         // JSON Data
         List<State__c> stateList = [SELECT Id,country__r.Id,country__r.Country_Code__c,country__r.Name,country__r.Total_States__c,
                                     country__r.Total_District__c, Name
-                                    FROM State__c WHERE country__r.Name = :countryName];
+                                    FROM State__c];
         if(!stateList.isEmpty()){
             Country countryWrapper = new Country();
             countryWrapper.countryName = stateList[0].country__r.Name;
