--- a/src/classes/DynamicMapOfCountry.cls
+++ b/src/classes/DynamicMapOfCountry.cls
@@ -18,14 +18,15 @@ public with sharing class DynamicMapOfCountry {
     *     Return      :   void
     *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 14/07/2022
     *                     V_1.1 - Modified - Sagar Nirwal - 14/07/2022 - In Map Reduce the no of SOQL Qurey
-                                                                        and Implement in a Single Qurey 
+                                                                        and Implement in a Single Qurey and add the URL od the record
     **/
     public DynamicMapOfCountry(String countryName,String startLetter) {
         
         //this qurey working Parent(Country) to child(State) and child(District) to Parent(State) 
-        List<State__c>  listofState = [SELECT Id,country__r.Country_Code__c,country__r.Name,Name,
+        List<State__c>  listofState = [SELECT Id,country__r.Id, country__r.Country_Code__c,country__r.Name,Name,
                                        (SELECT State__r.Country__r.Name, state__r.Name,Name FROM Districts__r ) 
-                                       FROM State__c ];
+                                       FROM State__c 
+                                       WHERE country__r.Name = :countryName];
         List<String> listOfCombinations = new List<String>();
         if(!listofState.isEmpty()){
             for(State__c state :listofState) {
@@ -50,6 +51,8 @@ public with sharing class DynamicMapOfCountry {
         }
         aggregateQurey();
         countryData(countryName);
+        String recordLink = URL.getSalesforceBaseUrl().toExternalForm() + '/' + listofState[0].Country__r.Id;
+        System.debug(recordLink);
     }
 
     /**   Description :   Method Update the Field of Country by using Aggregate Qurey  
@@ -125,20 +128,8 @@ public with sharing class DynamicMapOfCountry {
             cou.Id =  stateList[0].country__r.Id;
             cou.Country_JASON__c = JSONData;
             update cou;
-            String recordLink = URL.getSalesforceBaseUrl().getHost()+'/'+cou.Id;
-            System.debug(recordLink);
         }
     }
-    /**   Description :   Pagerefernce method
-    *     Created By  :   Sagar Nirwal
-    *     Arguments   :   none
-    *     Return      :   pagerefernce 
-    *     Revision log:   V_1.0 - Created  - Sagar Nirwal - 21/07/2022
-    *                     V_1.1 - Modified - Sagar Nirwal - 21/07/2022 - Detail what you modified 
-    **/    
-    public pagereference redirectUser(){
-        return new pagereference('/');
-    }    
     //Wrapper Classes
     
     public class CountryData{
@@ -168,4 +159,4 @@ USER_DEBUG [122]|DEBUG|{"country":{"countryName":"USA","countryCode":"+1","total
 {"districtName":"Oakland"},{"districtName":"San Francisco"}]},{"stateName":"Utah","districts":[{"districtName":"Salt Lake City"},
 {"districtName":"West Jordan"},{"districtName":"West Valley City"},{"districtName":"Urovo"}]},{"stateName":"Florida",
 "districts":[{"districtName":"Naples"},{"districtName":"Orlando"},{"districtName":"Miami"},{"districtName":"Destin"}]}]}} 
-USER_DEBUG [130]|DEBUG|fexleservicesprivatelimi-1d-dev-ed.my.salesforce.com/a0F5i000000jhFaEAI */
+USER_DEBUG [55]|DEBUG|https://fexleservicesprivatelimi-1d-dev-ed.my.salesforce.com/a0F5i000000jhFaEAI */
